<resources>
    <string name="app_name">Car App</string>
    <string name="button_addCar">Add Car</string>
    <string name="hint_carMake">Car Make</string>
    <string name="hint_carModel">Car Model</string>
    <string name="hint_carYear">Car Year</string>
    <string name="hint_engineSize">Engine Size</string>
    <string name="menu_addCar">Add</string>
    <string name="menu_cancelCar">Cancel</string>
    <string name="enter_car_make">Please enter a Make </string>
    <string name="enter_car_model">Please enter a Model </string>
    <string name="enter_car_engine">Please enter a valid engine size </string>
    <string name="enter_car_image">Please add an image </string>
    <string name="car_deleted">Car deleted </string>
    <string name="car_updated">Car updated </string>
    <string name="car_added">Car added </string>
    <string name="save_car">Save Car </string>
    <string name="button_addImage">Add Image </string>
    <string name="select_car_image">Select Car Image</string>
    <string name="change_car_image">Change Image</string>
    <string name="car_image">Car Image</string>
    <string name="menu_deleteCar">Delete</string>
    <string name="login_screen">Sign Up/Login to Car App</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_location">Set Location</string>
    <string name="engine_size">Engine Size</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_car_maps">Map of Cars</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>